[workspace.package]
edition = "2021"
version = "0.1.0"

[workspace.dependencies]
anyhow = "1.0.95"
aoc-cli = { version = "0.1.0", path = "aoc-cli" }

[workspace]
members = [
    "aoc-cli",
    "day-1",
    "day-10",
    "day-11",
    "day-12",
    "day-13",
    "day-14",
    "day-15",
    "day-16",
    "day-2",
    "day-3",
    "day-4",
    "day-5",
    "day-6",
    "day-7",
    "day-8",
    "day-9",
]
resolver = "2"
